--- a/Project/app/src/main/res/layout/activity_library.xml
+++ b/Project/app/src/main/res/layout/activity_library.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="#00FFFFFF"
-    tools:context=".LibraryActivity">
-
+    tools:context=".activities.LibraryActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,60 +52,70 @@
                 android:contentDescription="@string/settings_btn_desc" />
         </LinearLayout>
 
-        <androidx.appcompat.widget.SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/componentMargin"
-            app:iconifiedByDefault="false"
-            android:background="@drawable/custom_searchview"
-            app:queryBackground="@null"
-            app:queryHint="Search Here"
-            app:submitBackground="@null"
-            android:layout_marginHorizontal="@dimen/globalPadding" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/componentMargin"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:layout_marginHorizontal="@dimen/globalPadding">
-
-            <TextView
-                android:id="@+id/book_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/num_books"
-                android:textSize="@dimen/bodyText"/>
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <ImageButton
-                android:id="@+id/sort_books_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/sort_light"
-                android:backgroundTint="#00FFFFFF"
-                android:contentDescription="@string/sort_books_btn_desc" />
-        </LinearLayout>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:elevation="2dp"
+            android:layout_marginTop="@dimen/componentMargin"
             android:background="@drawable/shadow_down_light" />
 
-        <ListView
-            android:layout_width="match_parent"
+        <ScrollView
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:layout_marginTop="@dimen/componentMargin"
-            android:layout_marginHorizontal="@dimen/globalPadding">
+            android:layout_weight="1">
 
-        </ListView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.appcompat.widget.SearchView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/componentMargin"
+                    app:iconifiedByDefault="false"
+                    android:background="@drawable/custom_searchview"
+                    app:queryBackground="@null"
+                    app:queryHint="Search Here"
+                    app:submitBackground="@null"
+                    android:layout_marginHorizontal="@dimen/globalPadding" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/componentMargin"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginHorizontal="@dimen/globalPadding">
+
+                    <TextView
+                        android:id="@+id/book_count"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/num_books"
+                        android:textSize="@dimen/bodyText"/>
+
+                    <Space
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <ImageButton
+                        android:id="@+id/sort_books_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/sort_light"
+                        android:backgroundTint="#00FFFFFF"
+                        android:contentDescription="@string/sort_books_btn_desc" />
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/book_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/globalPadding" />
+            </LinearLayout>
+        </ScrollView>
 
         <View
             android:layout_width="match_parent"
@@ -117,9 +126,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="@dimen/componentMargin"
             android:layout_marginHorizontal="@dimen/globalPadding"
-            android:layout_marginBottom="@dimen/globalPadding"
+            android:layout_marginBottom="@dimen/componentMargin"
             android:baselineAligned="false">
 
             <LinearLayout
@@ -136,6 +144,22 @@
                     app:srcCompat="@drawable/book_light"
                     android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/books_btn_desc" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <ImageButton
+                    android:id="@+id/sharing"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/sharing_light"
+                    android:backgroundTint="#00FFFFFF"
+                    android:contentDescription="@string/sharing_btn_desc" />
             </LinearLayout>
 
             <LinearLayout
