Add setupCallbacks function

--- a/Project/app/src/main/res/layout/activity_library.xml
+++ b/Project/app/src/main/res/layout/activity_library.xml
@@ -70,6 +70,7 @@
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.SearchView
+                    android:id="@+id/search_bar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/componentMargin"
