--- a/Project/app/src/main/res/layout/activity_library.xml
+++ b/Project/app/src/main/res/layout/activity_library.xml
@@ -62,11 +62,12 @@
         <ScrollView
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <androidx.appcompat.widget.SearchView
@@ -113,7 +114,8 @@
                 <ListView
                     android:id="@+id/book_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
                     android:layout_marginHorizontal="@dimen/globalPadding" />
             </LinearLayout>
         </ScrollView>
