--- a/Project/app/src/main/res/layout/book_list_row_layout.xml
+++ b/Project/app/src/main/res/layout/book_list_row_layout.xml
@@ -37,6 +37,12 @@
     <Space
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:srcCompat="@drawable/reading_status_light" />
 
 </LinearLayout>
