--- a/Project/app/src/main/res/layout/book_list_row_layout.xml
+++ b/Project/app/src/main/res/layout/book_list_row_layout.xml
@@ -3,13 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="@dimen/bookListRowHeight"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:paddingVertical="@dimen/componentSpacing"
+    android:paddingHorizontal="@dimen/globalSpacing">
 
     <ImageView
         android:id="@+id/cover"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="@dimen/bookListRowCoverWidth"
+        android:layout_height="@dimen/bookListRowHeight"
         app:srcCompat="@mipmap/book_cover_default"
         android:contentDescription="@string/book_cover_desc" />
 
@@ -18,7 +21,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
-        android:layout_marginStart="@dimen/componentMargin">
+        android:layout_marginStart="@dimen/componentSpacing">
 
         <TextView
             android:id="@+id/title"
@@ -40,9 +43,9 @@
         android:layout_height="match_parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/book_status"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        app:srcCompat="@drawable/reading_status_light" />
+        android:layout_marginHorizontal="@dimen/globalSpacing" />
 
 </LinearLayout>
