Refactor pj structure and add DI container

--- a/Project/app/src/main/res/layout/activity_home.xml
+++ b/Project/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundTint="#00FFFFFF"
-    tools:context=".activities.HomeActivity">
+    tools:context=".activities.home.HomeActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -116,6 +116,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/empty_book_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:visibility="gone"
+                    android:text="HELLO"/>
 
             </LinearLayout>
 
