--- a/Project/app/src/main/res/layout/activity_settings.xml
+++ b/Project/app/src/main/res/layout/activity_settings.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/globalSpacing"
-    tools:context=".activities.SettingsActivity">
+    tools:context=".activities.settings.SettingsActivity">
 
   <ImageButton
       android:id="@+id/back_btn"
