--- a/Project/app/src/main/res/layout/book_list_row_layout.xml
+++ b/Project/app/src/main/res/layout/book_list_row_layout.xml
@@ -26,14 +26,12 @@
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/author1_author2" />
+            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
