--- a/Project/app/src/main/res/layout/book_list_row_layout.xml
+++ b/Project/app/src/main/res/layout/book_list_row_layout.xml
@@ -8,42 +8,35 @@
     android:gravity="center_vertical"
     android:paddingVertical="@dimen/componentSpacing"
     android:paddingHorizontal="@dimen/globalSpacing">
-
     <ImageView
         android:id="@+id/cover"
         android:layout_width="@dimen/bookListRowCoverWidth"
         android:layout_height="@dimen/bookListRowHeight"
         app:srcCompat="@mipmap/book_cover_default"
         android:contentDescription="@string/book_cover_desc" />
-
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_marginStart="@dimen/componentSpacing">
-
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
     </LinearLayout>
-
     <Space
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="match_parent" />
-
     <ImageView
         android:id="@+id/book_status"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/globalSpacing" />
-
+        android:layout_marginHorizontal="@dimen/globalSpacing"
+        android:contentDescription="@string/book_status" />
 </LinearLayout>
