--- a/Project/app/src/main/res/values/dimensions.xml
+++ b/Project/app/src/main/res/values/dimensions.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dropdownListPreferredItemHeight">48dp</dimen>
     <dimen name="globalSpacing">20dp</dimen>
     <dimen name="componentSpacing">15dp</dimen>
     <dimen name="heading1Text">40sp</dimen>
