--- a/Project/app/src/main/res/drawable/shadow_up_light.xml
+++ b/Project/app/src/main/res/drawable/shadow_up_light.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#40000000"
+        android:angle="90"
         android:endColor="#30ffffff"
-        android:angle="90"/>
+        android:startColor="#40000000" />
 </shape>
