--- a/Project/app/src/main/res/layout/book_list_row_layout.xml
+++ b/Project/app/src/main/res/layout/book_list_row_layout.xml
@@ -1,38 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bookListRowHeight"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
-    android:paddingVertical="@dimen/componentSpacing"
-    android:paddingHorizontal="@dimen/globalSpacing">
+    android:orientation="horizontal"
+    android:paddingHorizontal="@dimen/globalSpacing"
+    android:paddingVertical="@dimen/componentSpacing">
+
     <ImageView
         android:id="@+id/cover"
         android:layout_width="@dimen/bookListRowCoverWidth"
         android:layout_height="@dimen/bookListRowHeight"
-        app:srcCompat="@mipmap/book_cover_default"
-        android:contentDescription="@string/book_cover_desc" />
+        android:contentDescription="@string/book_cover_desc"
+        app:srcCompat="@mipmap/book_cover_default" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_marginStart="@dimen/componentSpacing"
         android:gravity="center_vertical"
-        android:layout_marginStart="@dimen/componentSpacing">
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
     <Space
         android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
     <ImageView
         android:id="@+id/book_status"
         android:layout_width="wrap_content"
