--- a/Project/app/src/main/res/layout/sort_spinner_dropdown_layout.xml
+++ b/Project/app/src/main/res/layout/sort_spinner_dropdown_layout.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal"
     android:paddingStart="@dimen/componentSpacing"
-    android:paddingEnd="@dimen/componentSpacing"
-    android:gravity="center_vertical">
+    android:paddingEnd="@dimen/componentSpacing">
+
     <ImageView
         android:id="@+id/tick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tick_light" />
+        app:srcCompat="@drawable/tick_light"
+        tools:ignore="ContentDescription" />
+
     <CheckedTextView
         android:id="@+id/text1"
         style="?android:attr/spinnerDropDownItemStyle"
-        android:singleLine="true"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dropdownListPreferredItemHeight"
-        android:ellipsize="marquee"/>
+        android:ellipsize="marquee"
+        android:singleLine="true" />
 </LinearLayout>
