Add minor enhancements

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -137,7 +137,8 @@
                             android:id="@+id/book_list"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
-                            android:layout_weight="1" />
+                            android:layout_weight="1"
+                            android:paddingTop="@dimen/componentSpacing" />
                     </LinearLayout>
                 </androidx.core.widget.NestedScrollView>
 
