--- a/app/src/main/res/layout/book_list_row_layout.xml
+++ b/app/src/main/res/layout/book_list_row_layout.xml
@@ -42,5 +42,5 @@
         android:id="@+id/book_status"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:contentDescription="@string/book_status" />
+        android:contentDescription="@string/book_status_img_desc" />
 </LinearLayout>
