--- a/app/src/main/res/layout/activity_add_books.xml
+++ b/app/src/main/res/layout/activity_add_books.xml
@@ -29,8 +29,6 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
                 android:contentDescription="@string/back_btn_desc"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/back_light" />
 
             <Space
@@ -39,9 +37,17 @@
                 android:layout_weight="1" />
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/componentSpacing"
+            android:background="@drawable/shadow_down_light"
+            android:elevation="2dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/componentSpacing"
             android:gravity="center"
             android:orientation="vertical">
 
