--- a/app/src/main/res/xml/settings_layout.xml
+++ b/app/src/main/res/xml/settings_layout.xml
@@ -1,8 +1,14 @@
 <PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SwitchPreferenceCompat
-        app:key="notifications"
-        app:title="Enable message notifications" />
+    <PreferenceCategory
+        app:key="notifications_category"
+        app:title="Notifications">
+
+        <SwitchPreferenceCompat
+            app:key="notifications"
+            app:title="Enable message notifications" />
+
+    </PreferenceCategory>
 
     <Preference
         app:key="feedback"
