--- a/app/src/main/res/layout/activity_reader.xml
+++ b/app/src/main/res/layout/activity_reader.xml
@@ -36,6 +36,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/bookmark_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#00FFFFFF"
+                android:contentDescription="@string/add_bookmark_btn_desc"
+                android:foreground="?android:attr/selectableItemBackground"
+                app:srcCompat="@drawable/bookmark_collection_light" />
         </LinearLayout>
 
         <View
