--- a/app/src/main/res/layout/book_list_sort_spinner_dropdown_layout.xml
+++ b/app/src/main/res/layout/book_list_sort_spinner_dropdown_layout.xml
@@ -17,7 +17,7 @@
         tools:ignore="ContentDescription" />
 
     <CheckedTextView
-        android:id="@+id/text1"
+        android:id="@+id/text"
         style="?android:attr/spinnerDropDownItemStyle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dropdownListPreferredItemHeight"
